// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aviso com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Aviso com argumentos,arg 1,arg 2,arg 3
",
}
`;

exports[`Aviso simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Aviso simples
",
}
`;

exports[`Erro com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "E:Erro com argumentos,arg 1,arg 2,arg 3
",
}
`;

exports[`Erro simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "E:Erro simples
",
}
`;

exports[`Informação com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Informação com argumentos,arg 1,arg 2,arg 3
",
}
`;

exports[`Informação simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Informação simples
",
}
`;

exports[`Log com argumentos {} 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Log com argumentos {0}, {1}, {2},arg 1,arg 2,3
",
}
`;

exports[`Verbose com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Informação com argumentos
E:>   key 1 arg 1
E:>   key 2 arg 2
E:>   key 3 3
",
}
`;

exports[`Verbose desligado 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Verbose desligado
",
}
`;

exports[`Verbose simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Verbose simples
",
}
`;
